--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.1.1/css/all.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Noto+Sans+JP:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=DotGothic16&family=Montserrat:wght@700&family=Noto+Sans+JP:wght@400;700&display=swap" rel="stylesheet">
   <title></title>
 </head>
 
@@ -25,32 +25,44 @@
       <div class="burger">
         <i class="fa-solid fa-bars"></i>
       </div>
+
+      <nav class="header-nav">
+        <ul class="header-nav__list">
+          <li class="header-nav__item"><a href="#" class="header-nav__link">home</a></li>
+          <li class="header-nav__item"><a href="#" class="header-nav__link">works</a></li>
+          <li class="header-nav__item"><a href="#" class="header-nav__link">profile</a></li>
+          <li class="header-nav__item"><a href="#" class="header-nav__link">contact</a></li>
+          <li class="header-nav__item"><a href="#" class="header-nav__link">blog</a></li>
+        </ul>
+      </nav>
     </div>
     <!-- /header__wrapper -->
   </header>
 
   <main>
     <div class="mv">
-      <div class="inner">
+      <!-- <div class="inner">
         <h1 class="site-title en-title"><span class="color--yellow">Y</span>uta<br><span class="color--yellow">K</span>obayashi's<br><span class="color--yellow">P</span>ortfolio</h1>
-      </div>
+      </div> -->
+      <!-- /inner -->
     </div>
+    <!-- /mv -->
 
     <section class="works">
-      <h2 class="sec-heading en-title sec-heading--left"><p class="small-title">制作物</p>works</h2>
+      <h2 class="sec-heading en-title sec-heading--left"><p class="sec-heading--ja">制作物</p>works</h2>
 
       <div class="inner">
         <h3 class="sec-sub-heading">架空案件</h3>
-        <p>架空の案件を想定して作成したサイトです。</p>
+        <p class="works__explain">架空の案件を想定して作成したサイトです。</p>
 
         <ul class="works__item-wrapper">
           <li class="works__item-list">
-            <ul class="works__item">
+            <!-- <ul class="works__item">
               <li class="works__item-title">タイトルが入るタイトルが入る</li>
               <li class="works__item-img thum"><img src="images/k-create-top-image.png" alt="画像"></li>
               <li class="works__item-content">猫を飼い始めることになったら、まず何が必要なのでしょうか？ 必ず必要になるグッズと、あると便利な猫グッズを紹介します。</li>
               <li class="works__item-btn"><a href="" class="btn btn--more">詳しく見る</a></li>
-            </ul>
+            </ul> -->
             <!-- /works__item -->
           </li>
           <!-- /works__item-list -->
@@ -90,35 +102,38 @@
       <div class="practice__wrapper">
         <h3 class="sec-sub-heading">その他の制作物</h3>
 
-        <ul class="practice__list practice__list--odd">
-          <li class="practice__title">練習用コーディング</li>
-          <li class="practice__explain">コーディングの練習で作成したサイトです。</li>
-          <li class="practice__image thum">
-            <img src="images/LPサイト-top-screen.png" alt="画像">
-          </li>
-          <li><a href="" class="btn btn--more">詳しく見る</a></li>
-        </ul>
-        <!-- practice__list -->
+        <div class="practice__flex-con">
+          <ul class="practice__list practice__list--odd">
+            <li class="practice__title">練習用コーディング</li>
+            <li class="practice__explain">コーディングの練習で作成したサイトです。</li>
+            <li class="practice__image thum">
+              <img src="images/LPサイト-top-screen.png" alt="画像">
+            </li>
+            <li><a href="" class="btn btn--more">詳しく見る</a></li>
+          </ul>
+          <!-- practice__list -->
 
-        <ul class="practice__list practice__list--even">
-          <li class="practice__title">バナー制作</li>
-          <li class="practice__explain">バナー制作の練習です</li>
-          <li class="practice__image thum">
-            <img src="images/k-create-banner-300×250.jpg" alt="画像">
-          </li>
-          <li><a href="" class="btn btn--more">詳しく見る</a></li>
-        </ul>
-        <!-- practice__list -->
+          <ul class="practice__list practice__list--even">
+            <li class="practice__title">バナー制作</li>
+            <li class="practice__explain">バナー制作の練習です</li>
+            <li class="practice__image thum">
+              <img src="images/k-create-banner-300×250.jpg" alt="画像">
+            </li>
+            <li><a href="" class="btn btn--more">詳しく見る</a></li>
+          </ul>
+          <!-- practice__list -->
 
-        <ul class="practice__list practice__list--odd">
-          <li class="practice__title">ブログ</li>
-          <li class="practice__explain">学習のアウトプットのためのブログです<i class="fa-solid fa-up-right-from-square"></i></li>
-          <li class="practice__image thum">
-            <img src="images/blog-image.png" alt="画像">
-          </li>
-          <li><a href="" class="btn btn--more">詳しく見る</a></li>
-        </ul>
-        <!-- practice__list -->
+          <ul class="practice__list practice__list--odd">
+            <li class="practice__title">ブログ</li>
+            <li class="practice__explain">学習のアウトプットのためのブログです<i class="fa-solid fa-up-right-from-square"></i></li>
+            <li class="practice__image thum">
+              <img src="images/blog-image.png" alt="画像">
+            </li>
+            <li><a href="" class="btn btn--more">詳しく見る</a></li>
+          </ul>
+          <!-- practice__list -->
+        </div>
+        <!-- /practice__flex-con -->
 
       </div>
       <!-- /practice__wrapper -->
@@ -126,15 +141,40 @@
     </section>
 
     <section class="about">
-      <h2 class="sec-heading en-title sec-heading--right"><p class="small-title">私について</p>about</h2>
+      <h2 class="sec-heading en-title sec-heading--right"><p class="sec-heading--ja">私について</p>about</h2>
 
-      <div class="inner">
-        自己紹介
+      <div class="about__wrapper">
+        <div class="about-image__wrapper">
+          <figure class="about-image__image">
+            <img src="images/kbyt.png" alt="こばゆたくん">
+          </figure>
+  
+          <div class="about-image__content-frame rpg-frame mv__rpg-frame">
+            <p class="rpg-serif mv__rpg-serif about-image__text TextTyping">ポートフォリオ を ご覧いただきありがとうございます</p>
+          </div>
+        </div>
+        <!-- /about-image__wrapper -->
+
+        <div class="about-body__wrapper">
+          <p class="about-body__title en-title">Yuta Kobayashi</p>
+          <ul class="about-body__content-list">
+            <li class="about-body__content">大学を卒業後、実家の家業である飲食店で勤務。
+              その後、書店にて正社員として接客販売を中心に勤めてきました。</li>
+            <li class="about-body__content">店内のレイアウト用にデザインを学んでいたところ、
+              Webデザインに興味を持ち独学で学習を始めました。</li>
+            <li class="about-body__content">趣味は野球観戦、音楽制作、御朱印集め</li>
+          </ul>
+  
+          <a href="" class="btn btn--pageChange mt-70">プロフィールへ</a>
+        </div>
+        <!-- /about-body__wrapper -->
       </div>
+      <!-- /about__wrapper -->
+
     </section>
 
     <section class="contact">
-      <h2 class="sec-heading en-title sec-heading--left"><p class="small-title">お問い合わせ</p>contact</h2>
+      <h2 class="sec-heading en-title sec-heading--left"><p class="sec-heading--ja">お問い合わせ</p>contact</h2>
 
       <div class="inner">
         <p>お忙しい中ご覧いただきありがとうございます。
