innerからやり直し

--- a/index.html
+++ b/index.html
@@ -149,8 +149,8 @@
             <img src="images/kbyt.png" alt="こばゆたくん">
           </figure>
   
-          <div class="about-image__content-frame rpg-frame mv__rpg-frame">
-            <p class="rpg-serif mv__rpg-serif about-image__text TextTyping">ポートフォリオ を ご覧いただきありがとうございます</p>
+          <div class="about-image__content-frame">
+            <p class="about-image__text TextTyping">ポートフォリオ を ご覧いただきありがとうございます</p>
           </div>
         </div>
         <!-- /about-image__wrapper -->
@@ -165,7 +165,7 @@
             <li class="about-body__content">趣味は野球観戦、音楽制作、御朱印集め</li>
           </ul>
   
-          <a href="" class="btn btn--pageChange mt-70">プロフィールへ</a>
+          <a href="" class="btn btn--pageChange mt-70 mla">プロフィールへ</a>
         </div>
         <!-- /about-body__wrapper -->
       </div>
@@ -177,7 +177,7 @@
       <h2 class="sec-heading en-title sec-heading--left"><p class="sec-heading--ja">お問い合わせ</p>contact</h2>
 
       <div class="inner">
-        <p>お忙しい中ご覧いただきありがとうございます。
+        <p>お忙しい中ご覧いただきありがとうございます。<br>
           お仕事の話はもちろん、サイトの感想など何でもお聞かせください。</p>
 
           <a href="" class="btn btn--pageChange mt-70">お問い合わせへ</a>
