固定ヘッダー完成

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <!-- /pc用ナビメニュー -->
     </div>
     <!-- /header__wrapper -->
-    <div class="q"><img src="images/food_menu.png" alt=""></div>
+    <!-- <div class="q"><img src="images/food_menu.png" alt=""></div> -->
   </header>
 
   <main>
