--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <li class="header-nav--pc__item"><a href="#" class="header-nav--pc__link">works</a></li>
           <li class="header-nav--pc__item"><a href="#" class="header-nav--pc__link">profile</a></li>
           <li class="header-nav--pc__item"><a href="#" class="header-nav--pc__link">contact</a></li>
-          <li class="header-nav--pc__item"><a href="#" class="header-nav--pc__link">blog</a></li>
+          <li class="header-nav--pc__item"><a href="#" class="header-nav--pc__link">blog<i class="fa-solid fa-up-right-from-square"></i></a></li>
         </ul>
       </nav>
       <!-- /pc用ナビメニュー -->
