contactページの完成

--- a/contact.html
+++ b/contact.html
@@ -73,6 +73,7 @@
         <p class="contact__text">お忙しい中ご覧いただきありがとうございます。<br>お仕事の話はもちろん、サイトの感想など何でもお聞かせください。</p>
 
         <form action="#">
+
           <div class="form-parts">
             <div class="form-parts__label">
               <span class="label-body must">必須</span>
@@ -84,8 +85,55 @@
           </div>
           <!-- /form-parts -->
 
+          <div class="form-parts">
+            <div class="form-parts__label">
+              <span class="label-body must">必須</span>
+              <label for="name" class="label-title">お名前</label>
+            </div>
+            <!-- /parts__label -->
 
-          <input type="submit" value="送信">
+            <input type="text" id="name" placeholder="例）山田　太郎" class="form-parts__body"> 
+          </div>
+          <!-- /form-parts -->
+
+          <div class="form-parts">
+            <div class="form-parts__label">
+              <span class="label-body free">任意</span>
+              <label for="mail" class="label-title">メールアドレス</label>
+            </div>
+            <!-- /parts__label -->
+
+            <input type="email" id="mail" placeholder="例）abc@mail.com" class="form-parts__body"> 
+          </div>
+          <!-- /form-parts -->
+
+          <div class="form-parts">
+            <div class="form-parts__label">
+              <span class="label-body free">任意</span>
+              <label for="title" class="label-title">件名</label>
+            </div>
+            <!-- /parts__label -->
+
+            <input type="text" id="title" placeholder="例）ABCデザイン" class="form-parts__body"> 
+          </div>
+          <!-- /form-parts -->
+
+          <div class="form-parts">
+            <div class="form-parts__label">
+              <span class="label-body must">必須</span>
+              <label for="question" class="label-title">お問い合わせ内容</label>
+            </div>
+            <!-- /parts__label -->
+
+            <textarea name="" id="question" placeholder="ご自由にお書きください" class="form-parts__body textarea"></textarea>
+          </div>
+          <!-- /form-parts -->
+
+          <div class="acceptance">
+            <p>入力内容にお間違いなければチェックを入れてください</p>
+          </div>
+
+          <button class="btn form-btn">送信</button>
         </form>
       </div>
     </section>
