--- a/template.html
+++ b/template.html
@@ -57,6 +57,22 @@
   </header>
 
   <main>
+    <h2 class="heading-common page-heading en-title">works</h2>
+
+    <div class="breadcrumbs">
+      <div class="breadcrumb_inner inner">
+        <span><a href="/">HOME</a></span> >
+        <span><a href="/">ページ名</a></span> >
+        <span>ページ名</span> 
+      </div>
+    </div>
+    <!-- /breadcrumbs -->
+
+    <section class="">
+      <div class="inner">
+
+      </div>
+    </section>
     
   </main>
 
