--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                   <li class="works-top__item-title">タイトルが入るタイトルが入る</li>
                   <li class="works-top__item-img thum"><img src="images/k-create-top-image.png" alt="画像"></li>
                   <li class="works-top__item-content">猫を飼い始めることになったら、まず何が必要なのでしょうか？ 必ず必要になるグッズと、あると便利な猫グッズを紹介します。</li>
-                  <li class="works-top__item-btn"><a href="" class="btn btn--more">詳しく見る</a></li>
+                  <li class="works-top__item-btn"><a href="single.html" class="btn btn--more">詳しく見る</a></li>
                 </ul>
                 <!-- /works-top__item -->
               </div>
