--- a/single.html
+++ b/single.html
@@ -57,6 +57,103 @@
   </header>
 
   <main>
+    <h2 class="heading-common page-heading en-title">タイトルが入るタイトルが入る</h2>
+
+    <div class="breadcrumbs">
+      <div class="breadcrumb_inner inner">
+        <span><a href="/">HOME</a></span> >
+        <span><a href="/">ページ名</a></span> >
+        <span>ページ名</span> 
+      </div>
+    </div>
+    <!-- /breadcrumbs -->
+
+    <section class="single">
+      <div class="inner">
+        <div class="single__top">
+
+          <div class="single__thum thum">
+            <img src="images/k-create-top-image.png" alt="">
+          </div>
+          <p class="single__explain">猫を飼い始めることになったら、まず何が必要なのでしょうか？ 必ず必要になるグッズと、あると便利な猫グッズを紹介します。 猫はこれからの10数年、ともに生きていく家族の一員です。</p>
+  
+          <table class="single-table">
+            <tr class="single-table__list">
+              <th class="single-table__head">制作期間</th>
+              <td class="single-table__body">約三週間</td>
+            </tr>
+
+            <tr class="single-table__list">
+              <th class="single-table__head">サイト構成</th>
+              <td class="single-table__body">Topページのみ</td>
+            </tr>
+
+            <tr class="single-table__list">
+              <th class="single-table__head">使用言語やツールなど</th>
+              <td class="single-table__body">Adobe XD / HTML / CSS(SCSS) / jQuery /Photo Shop(バナー作成)</td>
+            </tr>
+          </table>
+  
+          <a href="" class="btn btn--pageChange mt-70">サイトへ</a>
+  
+          <p  class="single__attention">※BASIC認証をかけてあります。<br>お手数ですがid”portfolio”, パスワード”kcreate”を入力してご覧ください</p>
+        </div>
+        <!-- /single__top -->
+
+        <div class="single__detail single__wrapper">
+          <h3 class="sec-sub-heading">サイトの詳細</h3>
+
+          <table class="single-table">
+            <tr class="single-table__list">
+              <th class="single-table__head">サイト制作の概要</th>
+              <td class="single-table__body">既卒者、転職者向けの人材派遣会社のWebサイト</td>
+            </tr>
+
+            <tr class="single-table__list">
+              <th class="single-table__head">ターゲットの基本情報</th>
+              <td class="single-table__body">・20代から30代を軸とした既卒者、転職者</td>
+              <td class="single-table__body">・20代から30代を軸とした既卒者、転職者</td>
+              <td class="single-table__body">・20代から30代を軸とした既卒者、転職者</td>
+              <td class="single-table__body">
+              </td>
+            </tr>
+
+            <tr class="single-table__list">
+              <th class="single-table__head">ゴール</th>
+              <td class="single-table__body">Webサイトを通じて登録者を増やす</td>
+            </tr>
+
+            <tr class="single-table__list">
+              <th class="single-table__head">ゴールまでのポイント</th>
+              <td class="single-table__body">・Webサイトを通じて登録者を増やす</td>
+              <td class="single-table__body">・製作実績をTopページに配置することでどのようなことができるかアピールする</td>
+              <td class="single-table__body">・20代から30代を軸とした既卒者、転職者</td>
+            </tr>
+          </table>
+
+        </div>
+        <!-- /single__detail -->
+
+        <div class="single__point single__wrapper">
+          <h3 class="sec-sub-heading">サイト制作のポイント</h3>
+
+          <div class="point">
+            <div class="screen">
+              <img src="images/k-create-screen .png" alt="">
+            </div>
+
+            <div>
+              
+            </div>
+          </div>
+        </div>
+
+
+
+      </div>
+      <!-- /inner -->
+
+    </section>
     
   </main>
 
