--- a/index.html
+++ b/index.html
@@ -71,8 +71,10 @@
       <div class="inner">
         <h2 class="heading-common sec-heading en-title sec-heading--left sec-heading__bg"><p class="sec-heading--ja">制作物</p>works</h2>
 
-        <h3 class="sec-sub-heading">架空案件</h3>
-        <p class="works__explain">架空の案件を想定して作成したサイトです。</p>
+        <div class="sec-sub-heading-wrapper">
+          <h3 class="sec-sub-heading">架空案件</h3>
+          <p class="works__explain">架空の案件を想定して作成したサイトです。</p>
+        </div>
 
         <!-- <ul class="works__item-wrapper">
           <li class="works__item-list">
@@ -172,7 +174,9 @@
       <!-- /inner -->
 
       <div class="practice__wrapper">
-        <h3 class="sec-sub-heading">その他の制作物</h3>
+        <div class="sec-sub-heading-wrapper">
+          <h3 class="sec-sub-heading">その他の制作物</h3>
+        </div>
 
         <div class="practice__list-wrapper">
           
