--- a/single.html
+++ b/single.html
@@ -70,85 +70,159 @@
 
     <section class="single">
       <div class="inner">
-        <div class="single__top">
+        <div class="single-top">
 
-          <div class="single__thum thum">
+          <div class="single-top__thum thum">
             <img src="images/k-create-top-image.png" alt="">
           </div>
-          <p class="single__explain">猫を飼い始めることになったら、まず何が必要なのでしょうか？ 必ず必要になるグッズと、あると便利な猫グッズを紹介します。 猫はこれからの10数年、ともに生きていく家族の一員です。</p>
-  
-          <table class="single-table">
-            <tr class="single-table__list">
-              <th class="single-table__head">制作期間</th>
-              <td class="single-table__body">約三週間</td>
-            </tr>
+          <p class="single-top__explain">猫を飼い始めることになったら、まず何が必要なのでしょうか？ 必ず必要になるグッズと、あると便利な猫グッズを紹介します。 猫はこれからの10数年、ともに生きていく家族の一員です。</p>
 
-            <tr class="single-table__list">
-              <th class="single-table__head">サイト構成</th>
-              <td class="single-table__body">Topページのみ</td>
-            </tr>
+          <ul class="single-content">
+            <li class="single-content__list">
+              <p class="single-content__title">制作期間</p>
 
-            <tr class="single-table__list">
-              <th class="single-table__head">使用言語やツールなど</th>
-              <td class="single-table__body">Adobe XD / HTML / CSS(SCSS) / jQuery /Photo Shop(バナー作成)</td>
-            </tr>
-          </table>
+              <ul class="single-content__text-wrapper"> 
+                <li class="single-content__text">約三週間</li>
+              </ul>
+            </li>
+            <!-- /single-content__list -->
+
+            <li class="single-content__list">
+              <p class="single-content__title">サイト構成</p>
+
+              <ul class="single-content__text-wrapper"> 
+                <li class="single-content__text">Topページのみ</li>
+              </ul>
+            </li>
+            <!-- /single-content__list -->
+
+            <li class="single-content__list">
+              <p class="single-content__title">使用言語やツールなど</p>
+
+              <ul class="single-content__text-wrapper"> 
+                <li class="single-content__text">Adobe XD / HTML / CSS(SCSS) / jQuery /Photo Shop(バナー作成)</li>
+              </ul>
+            </li>
+            <!-- /single-content__list -->
+
+          </ul>
+          <!-- /single-content -->
   
           <a href="" class="btn btn--pageChange mt-70">サイトへ</a>
   
-          <p  class="single__attention">※BASIC認証をかけてあります。<br>お手数ですがid”portfolio”, パスワード”kcreate”を入力してご覧ください</p>
+          <p  class="single-top__attention">※BASIC認証をかけてあります。<br>お手数ですがid”portfolio”, パスワード”kcreate”を入力してご覧ください</p>
         </div>
-        <!-- /single__top -->
+        <!-- /single-top -->
 
-        <div class="single__detail single__wrapper">
-          <h3 class="sec-sub-heading">サイトの詳細</h3>
+        <div class="single-detail single__wrapper">
+          <div class="sec-sub-heading-wrapper">
+            <h3 class="sec-sub-heading">サイトの詳細</h3>
+          </div>
 
-          <table class="single-table">
-            <tr class="single-table__list">
-              <th class="single-table__head">サイト制作の概要</th>
-              <td class="single-table__body">既卒者、転職者向けの人材派遣会社のWebサイト</td>
-            </tr>
+          <ul class="single-content">
+            <li class="single-content__list">
+              <p class="single-content__title">サイト制作の概要</p>
 
-            <tr class="single-table__list">
-              <th class="single-table__head">ターゲットの基本情報</th>
-              <td class="single-table__body">・20代から30代を軸とした既卒者、転職者</td>
-              <td class="single-table__body">・20代から30代を軸とした既卒者、転職者</td>
-              <td class="single-table__body">・20代から30代を軸とした既卒者、転職者</td>
-              <td class="single-table__body">
-              </td>
-            </tr>
+              <ul class="single-content__text-wrapper"> 
+                <li class="single-content__text">既卒者、転職者向けの人材派遣会社のWebサイト</li>
+              </ul>
+            </li>
+            <!-- /single-content__list -->
 
-            <tr class="single-table__list">
-              <th class="single-table__head">ゴール</th>
-              <td class="single-table__body">Webサイトを通じて登録者を増やす</td>
-            </tr>
+            <li class="single-content__list">
+              <p class="single-content__title">ターゲットの基本情報</p>
 
-            <tr class="single-table__list">
-              <th class="single-table__head">ゴールまでのポイント</th>
-              <td class="single-table__body">・Webサイトを通じて登録者を増やす</td>
-              <td class="single-table__body">・製作実績をTopページに配置することでどのようなことができるかアピールする</td>
-              <td class="single-table__body">・20代から30代を軸とした既卒者、転職者</td>
-            </tr>
-          </table>
+              <ul class="single-content__text-wrapper"> 
+                <li class="single-content__text">・20代から30代を軸とした既卒者、転職者</li>
+                <li class="single-content__text">・20代から30代を軸とした既卒者、転職者</li>
+                <li class="single-content__text">・20代から30代を軸とした既卒者、転職者</li>
+              </ul>
+            </li>
+            <!-- /single-content__list -->
 
+            <li class="single-content__list">
+              <p class="single-content__title">ゴール</p>
+
+              <ul class="single-content__text-wrapper"> 
+                <li class="single-content__text">Webサイトを通じて登録者を増やす</li>
+              </ul>
+            </li>
+            <!-- /single-content__list -->
+
+            <li class="single-content__list">
+              <p class="single-content__title">ゴールまでのポイント</p>
+
+              <ul class="single-content__text-wrapper"> 
+                <li class="single-content__text">・Webサイトを通じて登録者を増やす</li>
+                <li class="single-content__text">・製作実績をTopページに配置することでどのようなことができるかアピールする</li>
+                <li class="single-content__text">・20代から30代を軸とした既卒者、転職者</li>
+              </ul>
+            </li>
+            <!-- /single-content__list -->
+
+          </ul>
+          <!-- /single-content -->
+          
         </div>
         <!-- /single__detail -->
 
-        <div class="single__point single__wrapper">
-          <h3 class="sec-sub-heading">サイト制作のポイント</h3>
+        <div class="single-point single__wrapper">
+          <div class="sec-sub-heading-wrapper">
+            <h3 class="sec-sub-heading">サイト制作のポイント</h3>
+          </div>
 
-          <div class="point">
-            <div class="screen">
+          <div class="single-point__wrapper">
+            <div class="single-point__image">
               <img src="images/k-create-screen .png" alt="">
             </div>
 
-            <div>
-              
+            <div class="single-point__list">
+              <div class="single-point__item">
+                <p class="single-point__heading">header</p>
+                <p class="single-point__content">猫を飼い始めることになったら、まず何が必要なのでしょうか？ 必ず必要になるグッズと、あると便利な猫グッズを紹介します。 </p>
+              </div>
+              <!-- /single-point__item -->
+
+              <div class="single-point__item">
+                <p class="single-point__heading">header</p>
+                <p class="single-point__content">猫を飼い始めることになったら、まず何が必要なのでしょうか？ 必ず必要になるグッズと、あると便利な猫グッズを紹介します。 </p>
+              </div>
+              <!-- /single-point__item -->
+
+              <div class="single-point__item">
+                <p class="single-point__heading">header</p>
+                <p class="single-point__content">猫を飼い始めることになったら、まず何が必要なのでしょうか？ 必ず必要になるグッズと、あると便利な猫グッズを紹介します。 </p>
+              </div>
+              <!-- /single-point__item -->
+
+              <div class="single-point__item">
+                <p class="single-point__heading">header</p>
+                <p class="single-point__content">猫を飼い始めることになったら、まず何が必要なのでしょうか？ 必ず必要になるグッズと、あると便利な猫グッズを紹介します。 </p>
+              </div>
+              <!-- /single-point__item -->
+
+              <div class="single-point__item">
+                <p class="single-point__heading">header</p>
+                <p class="single-point__content">猫を飼い始めることになったら、まず何が必要なのでしょうか？ 必ず必要になるグッズと、あると便利な猫グッズを紹介します。 </p>
+              </div>
+              <!-- /single-point__item -->
+
+              <div class="single-point__item">
+                <p class="single-point__heading">header</p>
+                <p class="single-point__content">猫を飼い始めることになったら、まず何が必要なのでしょうか？ 必ず必要になるグッズと、あると便利な猫グッズを紹介します。 </p>
+              </div>
+              <!-- /single-point__item -->
             </div>
+            <!-- /single-point__list -->
           </div>
+          <!-- /single-point__wrapper -->
         </div>
+        <!-- /single-point -->
 
-
+        <div class="pagenation-wrapper">
+          <a href="#" class="pagenation prev-page"></a>
+          <a href="#" class="pagenation next-page"></a>
+        </div>
 
       </div>
       <!-- /inner -->
