--- a/404.html
+++ b/404.html
@@ -59,7 +59,7 @@
   <main>
     <h2 class="heading-common page-heading en-title">404 page</h2>
 
-    <div class="breadcrumbs">
+    <div class="breadcrumbs breadcrumbs-mb">
       <div class="breadcrumb_inner inner">
         <span><a href="/">HOME</a></span> >
         <span><a href="/">ページ名</a></span> >
