--- a/template.html
+++ b/template.html
@@ -57,9 +57,9 @@
   </header>
 
   <main>
-    <h2 class="heading-common page-heading en-title">works</h2>
+    <h2 class="heading-common page-heading en-title inner">works</h2>
 
-    <div class="breadcrumbs">
+    <div class="breadcrumbs breadcrumbs-mb">
       <div class="breadcrumb_inner inner">
         <span><a href="/">HOME</a></span> >
         <span><a href="/">ページ名</a></span> >
