--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                   <li class="works-top__item-title">タイトルが入るタイトルが入る</li>
                   <li class="works-top__item-img thum"><img src="images/k-create-top-image.png" alt="画像"></li>
                   <li class="works-top__item-content">猫を飼い始めることになったら、まず何が必要なのでしょうか？ 必ず必要になるグッズと、あると便利な猫グッズを紹介します。</li>
-                  <li class="works-top__item-btn"><a href="single.html" class="btn btn--more">詳しく見る</a></li>
+                  <li class="works-top__item-btn"><a href="single-temp.html" class="btn btn--more">詳しく見る</a></li>
                 </ul>
                 <!-- /works-top__item -->
               </div>
@@ -187,7 +187,7 @@
               <ul class="slider practice__image thum">
   
                 <li class="slider-item">
-                  <img src="images/huvest-top-image.png" alt="模写コーディングその１">
+                  <img src="images/huvest-top-image.png" alt="模写コーディングその１"  loading="lazy">
                 </li>
   
                 <li class="slider-item">
@@ -212,7 +212,7 @@
               <ul class="slider practice__image thum">
   
                 <li class="slider-item">
-                  <img src="images/k-create-banner-300×250.jpg" alt="画像">
+                  <img src="images/k-create-banner-300×250.jpg" alt="画像"  loading="lazy">
                 </li>
   
                 <li class="slider-item">
@@ -234,7 +234,7 @@
             <li class="practice__title">ブログ</li>
             <li class="practice__explain">学習のアウトプットのためのブログです<i class="fa-solid fa-up-right-from-square"></i></li>
             <li class="practice__image thum">
-              <img src="images/blog-image.png" alt="画像">
+              <img src="images/blog-image.png" alt="画像"  loading="lazy">
             </li>
             <li><a href="" class="btn btn--more">詳しく見る</a></li>
           </ul>
@@ -254,7 +254,7 @@
         <div class="about__wrapper">
           <div class="about-image__wrapper">
             <figure class="about-image__image">
-              <img src="images/kbyt.png" alt="こばゆたくん">
+              <img src="images/kbyt.png" alt="こばゆたくん"  loading="lazy">
             </figure>
     
             <div class="about-image__content-frame">
@@ -265,6 +265,7 @@
   
           <div class="about-body__wrapper">
             <p class="about-body__title en-title">Yuta Kobayashi</p>
+            
             <ul class="about-body__content-list">
               <li class="about-body__content">大学を卒業後、実家の家業である飲食店で勤務。
                 その後、書店にて正社員として接客販売を中心に勤めてきました。</li>
