sectionの余白の設定

--- a/404.html
+++ b/404.html
@@ -68,7 +68,7 @@
     </div>
     <!-- /breadcrumbs -->
 
-    <section class="nf-page">
+    <section class="nf-page section">
       <div class="nf-page__wrapper inner">
         <p class="nf-page__text">申し訳ありません<br>お探しのページはありませんでした。</p>
         <p class="nf-page__to-link"><a href="index.html" class="nf-page__link">コチラ</a>からTopページに戻ることができます。</p>
