--- a/contact.html
+++ b/contact.html
@@ -68,7 +68,7 @@
     </div>
     <!-- /breadcrumbs -->
 
-    <section class="contact">
+    <section class="contact section">
       <div class="contact__wrapper inner">
         <p class="contact__text">お忙しい中ご覧いただきありがとうございます。<br>お仕事の話はもちろん、サイトの感想など何でもお聞かせください。</p>
 
