--- a/single-temp.html
+++ b/single-temp.html
@@ -68,7 +68,7 @@
     </div>
     <!-- /breadcrumbs -->
 
-    <section class="single">
+    <section class="single section">
       <div class="inner">
         <div class="single-top">
 
