--- a/template.html
+++ b/template.html
@@ -68,7 +68,7 @@
     </div>
     <!-- /breadcrumbs -->
 
-    <section class="">
+    <section class="section">
       <div class="inner">
 
       </div>
