--- a/works.html
+++ b/works.html
@@ -68,7 +68,7 @@
     </div>
     <!-- /breadcrumbs -->
     
-    <section class="works">
+    <section class="works section">
       <div class="works__wrapper inner">
 
         <ul class="works__item-list">
