ヘッダーナビの背景色の変更

--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
 
     <section class="about section">
       <div class="inner">
-        <h2 class="heading-common sec-heading en-title sec-heading--right sec-heading__bg"><p class="sec-heading--ja">私について</p>about</h2>
+        <h2 class="heading-common sec-heading en-title --right"><p class="sec-heading--ja">私について</p>about</h2>
 
         <div class="about__wrapper">
           <div class="about-image__wrapper">
@@ -285,7 +285,7 @@
     <section class="contact-top section">
       <div class="inner">
   
-        <h2 class="heading-common sec-heading en-title sec-heading--left sec-heading__bg"><p class="sec-heading--ja">お問い合わせ</p>contact</h2>
+        <h2 class="heading-common sec-heading en-title --left"><p class="sec-heading--ja">お問い合わせ</p>contact</h2>
 
         <p>お忙しい中ご覧いただきありがとうございます。<br>お仕事の話はもちろん、サイトの感想など何でもお聞かせください。</p>
 
