--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"/>
   <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css">
   <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css">
+
+<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/vegas/2.4.4/vegas.min.css">
   <link rel="stylesheet" href="css/styles.css">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -59,11 +61,13 @@
   </header>
 
   <main>
-    <div class="mv">
-      <div class="inner">
+    <div class="mv"  id="slider">
+      <div class="inner flex">
         <h1 class="site-title en-title"><span class="color--yellow">Y</span>uta<br><span class="color--yellow">K</span>obayashi's<br><span class="color--yellow">P</span>ortfolio</h1>
+
       </div>
       <!-- /inner -->
+      <div class="scrolldown"><span>Scroll</span></div>
     </div>
     <!-- /mv -->
 
@@ -75,6 +79,7 @@
           <h3 class="sec-sub-heading">架空案件</h3>
           <p class="works__explain">架空の案件を想定して作成したサイトです。</p>
         </div>
+        
 
         <!-- <ul class="works__item-wrapper">
           <li class="works__item-list">
@@ -307,6 +312,7 @@
   <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
   <script src="js/swiper.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/vegas/2.4.4/vegas.min.js"></script>
   <script src="js/main.js"></script>
 </body>
 
