ページの見出しとフッターの変更

--- a/404.html
+++ b/404.html
@@ -57,7 +57,7 @@
   </header>
 
   <main>
-    <h2 class="heading-common page-heading en-title">404 page</h2>
+    <h2 class="heading-common page-heading en-title"><span class="first-letter--change">4</span>04 page</h2>
 
     <div class="breadcrumbs breadcrumbs-mb">
       <div class="breadcrumb_inner inner">
