--- a/profile.html
+++ b/profile.html
@@ -57,7 +57,7 @@
   </header>
 
   <main>
-    <h2 class="heading-common page-heading en-title inner">profile</h2>
+    <h2 class="heading-common page-heading en-title"><span class="first-letter--change">p</span>rofile</h2>
 
     <div class="breadcrumbs">
       <div class="breadcrumb_inner inner">
