--- a/contact.html
+++ b/contact.html
@@ -57,7 +57,7 @@
   </header>
 
   <main>
-    <h2 class="heading-common page-heading en-title">contact</h2>
+    <h2 class="heading-common page-heading en-title"><span class="first-letter--change">c</span>ontact</h2>
 
     <div class="breadcrumbs breadcrumbs-mb">
       <div class="breadcrumb_inner inner">
