--- a/template.html
+++ b/template.html
@@ -57,7 +57,7 @@
   </header>
 
   <main>
-    <h2 class="heading-common page-heading en-title inner">works</h2>
+    <h2 class="heading-common page-heading en-title"><span class="first-letter--change">Y</span>orks</h2>
 
     <div class="breadcrumbs breadcrumbs-mb">
       <div class="breadcrumb_inner inner">
