--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
   <main>
     <div class="mv"  id="slider">
       <div class="inner flex">
-        <h1 class="site-title en-title"><span class="color--yellow">Y</span>uta<br><span class="color--yellow">K</span>obayashi's<br><span class="color--yellow">P</span>ortfolio</h1>
+        <h1 class="site-title en-title"><span class="first-letter--change">Y</span>uta<br><span class="first-letter--change">K</span>obayashi's<br><span class="first-letter--change">P</span>ortfolio</h1>
       </div>
       <!-- /inner -->
       <div class="scrolldown"><span>Scroll</span></div>
