見出し以外完成

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
         </div>
         <!-- /swiper-container -->
 
-        <a href="" class="btn btn--pageChange mt-70">制作物一覧へ</a>
+        <a href="works.html" class="btn btn--pageChange mt-70">制作物一覧へ</a>
       </div>
       <!-- /inner -->
 
@@ -277,7 +277,7 @@
               <li class="about-body__content">趣味は野球観戦、音楽制作、御朱印集め</li>
             </ul>
     
-            <a href="" class="btn btn--pageChange mt-70 mla">プロフィールへ</a>
+            <a href="profile.html" class="btn btn--pageChange mt-70 mla">プロフィールへ</a>
 
           </div>
           <!-- /about-body__wrapper -->
@@ -294,7 +294,7 @@
 
         <p>お忙しい中ご覧いただきありがとうございます。<br>お仕事の話はもちろん、サイトの感想など何でもお聞かせください。</p>
 
-        <a href="" class="btn btn--pageChange mt-70">お問い合わせへ</a>
+        <a href="contact.html" class="btn btn--pageChange mt-70">お問い合わせへ</a>
       </div>
       <!-- /inner -->
 
