コンテンツのpaddingの変更

--- a/contact.html
+++ b/contact.html
@@ -59,7 +59,7 @@
   <main>
     <h2 class="heading-common page-heading en-title"><span class="first-letter--change">c</span>ontact</h2>
 
-    <div class="breadcrumbs breadcrumbs-mb">
+    <div class="breadcrumbs">
       <div class="breadcrumb_inner inner">
         <span><a href="/">HOME</a></span> >
         <span><a href="/">ページ名</a></span> >
@@ -68,8 +68,8 @@
     </div>
     <!-- /breadcrumbs -->
 
-    <section class="contact section">
-      <div class="contact__wrapper inner">
+    <section class="contact">
+      <div class="contact__wrapper inner padding-container">
         <p class="contact__text">お忙しい中ご覧いただきありがとうございます。<br>お仕事の話はもちろん、サイトの感想など何でもお聞かせください。</p>
 
         <form action="#">
