--- a/single-temp.html
+++ b/single-temp.html
@@ -59,7 +59,7 @@
   <main>
     <h2 class="heading-common page-heading en-title"><span class="first-letter--change">Y</span>イトルが入るタイトルが入る</h2>
 
-    <div class="breadcrumbs breadcrumbs-mb">
+    <div class="breadcrumbs">
       <div class="breadcrumb_inner inner">
         <span><a href="/">HOME</a></span> >
         <span><a href="/">ページ名</a></span> >
@@ -68,7 +68,7 @@
     </div>
     <!-- /breadcrumbs -->
 
-    <section class="single section">
+    <section class="single padding-container">
       <div class="inner">
         <div class="single-top">
 
