--- a/works.html
+++ b/works.html
@@ -59,7 +59,7 @@
   <main>
     <h2 class="heading-common page-heading en-title"><span class="first-letter--change">w</span>orks</h2>
 
-    <div class="breadcrumbs breadcrumbs-mb">
+    <div class="breadcrumbs">
       <div class="breadcrumb_inner inner">
         <span><a href="/">HOME</a></span> >
         <span><a href="/">ページ名</a></span> >
@@ -68,8 +68,8 @@
     </div>
     <!-- /breadcrumbs -->
     
-    <section class="works section">
-      <div class="works__wrapper inner">
+    <section class="works">
+      <div class="works__wrapper inner padding-container">
 
         <ul class="works__item-list">
           <li class="works__item">
