--- a/404.html
+++ b/404.html
@@ -59,7 +59,7 @@
   <main>
     <h2 class="heading-common page-heading en-title"><span class="first-letter--change">4</span>04 page</h2>
 
-    <div class="breadcrumbs breadcrumbs-mb">
+    <div class="breadcrumbs">
       <div class="breadcrumb_inner inner">
         <span><a href="/">HOME</a></span> >
         <span><a href="/">ページ名</a></span> >
@@ -68,7 +68,7 @@
     </div>
     <!-- /breadcrumbs -->
 
-    <section class="nf-page section">
+    <section class="nf-page padding-container">
       <div class="nf-page__wrapper inner">
         <p class="nf-page__text">申し訳ありません<br>お探しのページはありませんでした。</p>
         <p class="nf-page__to-link"><a href="index.html" class="nf-page__link">コチラ</a>からTopページに戻ることができます。</p>
