--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
       <div class="inner">
         <h2 class="heading-common sec-heading en-title --right  over--inner"><p class="sec-heading--ja">私について</p>about</h2>
 
-        <div class="about__wrapper page--padding">
+        <div class="about__wrapper padding-container">
           <div class="about-image__wrapper">
             <figure class="about-image__image">
               <img src="images/kbyt.png" alt="こばゆたくん"  loading="lazy">
@@ -259,13 +259,13 @@
   
         <h2 class="heading-common sec-heading en-title --left over--inner"><p class="sec-heading--ja">お問い合わせ</p>contact</h2>
 
-        <div class="page--padding">
+        <div class="padding-container">
           <p>お忙しい中ご覧いただきありがとうございます。<br>お仕事の話はもちろん、サイトの感想など何でもお聞かせください。</p>
   
           <a href="contact.html" class="btn btn--pageChange mt-70">お問い合わせへ</a>
 
         </div>
-        <!-- /page--padding -->
+        <!-- /padding-container -->
       </div>
       <!-- /inner -->
 
