背景型の見出しの修正

--- a/profile.html
+++ b/profile.html
@@ -191,7 +191,7 @@
       <div class="inner">
         <div class="profile-wrapper-wcid">
 
-          <h3 class="prof-heading posi-left en-title heading-common wicd-title">what i can do</h3>
+          <h3 class="prof-heading  en-title heading-common wicd-title">what i can do</h3>
 
           <div class="wicd__wrapper">
             <ul class="wicd__lists">
