--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <!-- pc用ナビメニュー -->
       <nav class="gnav gnav--pc">
         <ul class="gnav--pc__list">
-          <li class="gnav--pc__item"><a href="index.html" class="gnav--pc__link">home</a></li>
+          <li class="gnav--pc__item current"><a href="index.html" class="gnav--pc__link">home</a></li>
           <li class="gnav--pc__item"><a href="works.html" class="gnav--pc__link">works</a></li>
           <li class="gnav--pc__item"><a href="profile.html" class="gnav--pc__link">profile</a></li>
           <li class="gnav--pc__item"><a href="contact.html" class="gnav--pc__link">contact</a></li>
