それぞれのアーカイブページにレスポンシブ用のCSSを追加

--- a/works.html
+++ b/works.html
@@ -72,7 +72,7 @@
       <div class="works__wrapper inner padding-container">
 
         <ul class="works__item-list">
-          <li class="works__item">
+          <li class="works__item item--responsive">
             <h3 class="works__item-title">タイトル</h3>
             <a href="single.html" class="works__item--link">
               <figure class="thum works--thum">
@@ -81,7 +81,7 @@
             </a>
           </li>
 
-          <li class="works__item">
+          <li class="works__item item--responsive">
             <h3 class="works__item-title">タイトル</h3>
             <a href="single.html" class="works__item--link">
               <figure class="thum works--thum">
@@ -90,7 +90,7 @@
             </a>
           </li>
 
-          <li class="works__item">
+          <li class="works__item item--responsive">
             <h3 class="works__item-title">タイトル</h3>
             <a href="single.html" class="works__item--link">
               <figure class="thum works--thum">
@@ -99,15 +99,7 @@
             </a>
           </li>
 
-          <li class="works__item">
-            <h3 class="works__item-title">タイトル</h3>
-            <a href="single.html" class="works__item--link">
-              <figure class="thum works--thum">
-                <img src="images/huvest-top-image.png" alt="" class="works__item-image">
-              </figure>
-            </a>
-          </li>
-          <li class="works__item">
+          <li class="works__item item--responsive">
             <h3 class="works__item-title">タイトル</h3>
             <a href="single.html" class="works__item--link">
               <figure class="thum works--thum">
@@ -116,7 +108,14 @@
             </a>
           </li>
 
-
+          <li class="works__item item--responsive">
+            <h3 class="works__item-title">タイトル</h3>
+            <a href="single.html" class="works__item--link">
+              <figure class="thum works--thum">
+                <img src="images/huvest-top-image.png" alt="" class="works__item-image">
+              </figure>
+            </a>
+          </li>
 
         </ul>
         <!-- /works__item-list -->
