--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
               <!-- /slider -->
             </li>
             <!-- /sliderarea -->
-            <li><a href="" class="btn btn--more">詳しく見る</a></li>
+            <li><a href="archive-banners.html" class="btn btn--more">詳しく見る</a></li>
           </ul>
           <!-- practice__list -->
 
@@ -217,7 +217,6 @@
 
     </section>
 
-    
     <section class="about section">
       <div class="inner">
         <h2 class="heading-common sec-heading en-title --right  over--inner"><p class="sec-heading--ja">私について</p>about</h2>
@@ -273,7 +272,6 @@
     </section>
     
   </main>
-
   
   <footer class="footer">
     <div class="footer__wrapper">
