--- a/archive-banners.html
+++ b/archive-banners.html
@@ -71,6 +71,7 @@
     
     <section class="works">
       <div class="works__wrapper inner padding-container">
+        <p class="works__text">バナー制作の練習です</p>
 
         <ul class="works__item-list banners__list">
           <li class="banners__item item--responsive">
