--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
               <!-- /slider -->
             </li>
             <!-- /sliderarea -->
-            <li><a href="" class="btn btn--more">詳しく見る</a></li>
+            <li><a href="archive-practice.html" class="btn btn--more">詳しく見る</a></li>
           </ul>
           <!-- practice__list -->
 
