--- a/works.html
+++ b/works.html
@@ -70,6 +70,7 @@
     
     <section class="works">
       <div class="works__wrapper inner padding-container">
+        <p class="works__text">架空の案件を想定して作成したサイトの一覧です</p>
 
         <ul class="works__item-list">
           <li class="works__item item--responsive">
