topの見出しのレイアウト変更

--- a/index.html
+++ b/index.html
@@ -25,11 +25,13 @@
         <a href="index.html" class="logo__link">Yuta Kobayashi's<br>Portfolio</a>
       </h1>
 
-      <div class="burger" id="burger">
+      <div class="burger">
         <div class="bar"></div>
         <div class="bar"></div>
         <div class="bar"></div>
       </div>
+
+
 
       <!-- sp用ナビメニュー -->
       <nav class="gnav gnav--sp">
@@ -72,7 +74,7 @@
 
     <section class="works-top section">
       <div class="inner">
-        <h2 class="heading-common sec-heading en-title sec-heading--left sec-heading__bg over--inner"><p class="sec-heading--ja">制作物</p>works</h2>
+        <h2 class="heading-common sec-heading en-title sec-heading__works over--inner"><p class="sec-heading--ja">制作物</p>works</h2>
 
         <h3 class="sec-sub-heading --daikei">架空案件</h3>
 
